# viot

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: deploy_dev.yml  (+4 more)
mqtt_handler/: .env.example  Makefile  go.mod  sqlc.yml
src/viot-api/: alembic.ini  pyproject.toml
src/viot-api/app/: bootstrap.py  config.py  contexts.py  enums.py  exceptions.py  log.py  main.py  model_include.py  models.py  routes.py  schemas.py
src/viot-api/app/database/: cache.py  config.py  core.py  dependencies.py  service.py
src/viot-api/app/database/migrations/: env.py
src/viot-api/app/database/migrations/versions/: 2024-08-01_user_team_role.py
src/viot-api/app/database/types/: __init__.py  ts_vector.py
src/viot-api/app/modules/auth/: api.py  config.py  constants.py  dependencies.py  jwt.py  models.py  schemas.py  service.py  utils.py
src/viot-api/app/modules/celery_task/: celery.py  config.py
src/viot-api/app/modules/celery_task/tasks/: mail_task.py
src/viot-api/app/modules/email/: config.py  enums.py  exceptions.py  service.py
src/viot-api/app/modules/email/templates/: reset-password.html  verify-account.html
src/viot-api/app/modules/invitation/: enums.py  models.py  schemas.py
src/viot-api/app/modules/role/: constants.py  models.py  schemas.py  service.py
src/viot-api/app/modules/team/: api.py  models.py  schemas.py  service.py
src/viot-api/app/utils/: serializer.py
src/viot-api/scripts/: start-celery.sh
src/viot-api/test/: conftest.py
src/viot-api/test/auth/: test_auth_service.py
src/viot-api/test/team/: test_team_service.py
src/viot-api/tests/: conftest.py  database.py  test_database_dependencies.py  test_database_service.py  test_redis_client.py
src/viot-api/tests/auth/: test_auth_service.py  test_jwt.py
src/viot-api/tests/email/: test_email_service.py
src/viot-api/tests/team/: test_team_service.py
viot/: mqtt_whitelist  sonar-project.properties
viot-background/: .env.example  .gitignore  Makefile  go.mod  go.sum
(+52 files in other folders)
