[tool.poetry]
name = "viot"
description = "Viot API"
version = "2.1.0"
authors = ["tuanvumaihuynh <tuanvux01@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "."}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
uvicorn = "^0.25.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
msgspec = "^0.18.6"
uvloop = "^0.19.0"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
yagmail = "^0.15.293"
jinja2 = "^3.1.4"
redis = {extras = ["hiredis"], version = "^5.0.7"}
python-slugify = "^8.0.4"
celery = "^5.4.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
ruff = "^0.5.0"
pre-commit = "^3.7.1"


[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
coverage = "^7.6.0"
pytest-mock = "^3.14.0"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
command_line = "-m pytest"
    
[tool.coverage.report]
include = ["app/*"]
show_missing = true